--- a/README
+++ b/README
@@ -33,3 +33,7 @@ Experiment:
   Example:
   -> remember when i used to have a boyfriend and he tried to hack my account bc i do lmao¬
   <- remember when i used to have a boyfriend and he tried to hack my account because i do laughing my a** off 
+
+
+- tweetCorpus.txt
+  annotated tweet sentiment corpus from http://www.cs.york.ac.uk/semeval-2013/task2/index.php?id=data. I combined the training set and test set. This can be used as our general tweet corpus. 
