--- a/report/intro.tex
+++ b/report/intro.tex
@@ -3,4 +3,10 @@
 Microblogging websites (such as Twitter, Weibo) have gained popularity in recent years. People can easily post real time, short message to express their opinions. 
 Sentiment of microblog is of particular interest because such information is valuable to both consumer andmanufactures.
 
-Most of existing works are based on bag of words classifiers. People propose and evaluate different features to improve the performance of bag-of-words model. Such classifiers can work well in longer documents by relying on a few words with strong sentiment such as "great" or "awesome". However, such bag-of-words models have difficulties in handling in negation and comparisons. Negation and comparison involves the structure of sentence which clearly is not in the scope of bag-of-words models. To further improve the performance, new models which capture the structure of sentences are needed. 
+Most of existing works are based on bag of words classifiers. People propose and evaluate different features to improve the performance of bag-of-words model. Such classifiers can work well in longer documents by relying on a few words with strong sentiment such as "great" or "awesome". However, bag-of-words models have difficulties in handling in negation and comparisons, which involves the structure of sentence. To further improve the performance, new compositional models which capture the structure of sentences are needed. 
+
+Socher et al., recently recently proposed a new model called the Recursive Neural Tensor Network (RNTN) to capture the compositional effects with higher accuracy. 
+Recursive Neural Tensor Networks take as input phrases of any length. 
+They represent a phrase through word vectors and a parse tree and then compute vectors for higher nodes in the tree using the same tensor-based composition function. (Socher et al., 2013). They compared their model with standard recursive neural network (RNN), maxtrix-vector RNNs, Navie Bayes and SVM. Their experiment shows that RNTN has the best performance in predicating fine-grained sentiment for all nodes. They also claim that RNTN can accurately captures the sentiment change and scope of negation. 
+
+However, the data set the above paper used is a bunch of single sentences extracted from well formatted movie reviews.  One significant feature of tweet is noisy. It contains ungrammatical sentences, typos, urls, 
