--- a/report/finalReport.tex
+++ b/report/finalReport.tex
@@ -12,6 +12,11 @@
 \usepackage{hyperref}
 \usepackage{float}
 \usepackage{multirow}
+\usepackage{graphicx}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{lipsum} % for the mock text
+\usepackage{mdframed}
 
 \title{Twitter sentiment blablabla}
 
@@ -29,14 +34,13 @@
 
 \input{abstract}
 \input{intro}
-\input{related}
+\input{definition}
 
-\input{svm}
-\input{rntn}
-\input{prePro}
+%\input{prePro}
 \input{exp}
+\input{related}
+\input{future}
 \input{conclusion}
-
 \input{ref}
 
 \end{document}
