--- a/report/intro.tex
+++ b/report/intro.tex
@@ -9,4 +9,8 @@ Socher et al., recently recently proposed a new model called the Recursive Neura
 Recursive Neural Tensor Networks take as input phrases of any length. 
 They represent a phrase through word vectors and a parse tree and then compute vectors for higher nodes in the tree using the same tensor-based composition function. (Socher et al., 2013). They compared their model with standard recursive neural network (RNN), maxtrix-vector RNNs, Navie Bayes and SVM. Their experiment shows that RNTN has the best performance in predicating fine-grained sentiment for all nodes. They also claim that RNTN can accurately captures the sentiment change and scope of negation. 
 
-However, the data set the above paper used is a bunch of single sentences extracted from well formatted movie reviews.  One significant feature of tweet is noisy. It contains ungrammatical sentences, typos, urls, 
+However, the data set used in the above paper is bunch of single sentences extracted from well formatted movie reviews, which is quite different from twitter message. One significant feature of tweet is noisy. It contains ungrammatical sentences, typos, urls, hash tag, target etc. In this paper, we explore the possibility of applying the RNTN model on twitter message. We collected twitter message from different sources and labeled some of them. We preprocessed the twitter corpus to better present the structure of the sentences and deleted some information which is not related the to the structure of the sentence such as urls.  
+
+Our experiment indicates bla bla bla. 
+
+\newpage
