--- a/report/finalReport.tex
+++ b/report/finalReport.tex
@@ -18,8 +18,8 @@
 \usepackage{lipsum} % for the mock text
 \usepackage{mdframed}
 
-\title{Twitter sentiment blablabla}
-
+\title{Twitter sentiment blablabla 
+\thanks{This is the final project report for CS 388 Natural Language Processing at The University of Texas at Austin in  2014 Spring}}
 \author{Yun Wu \qquad Qiren Chen \qquad Xiaofan Lu \\
   University of Texas at Austin \\
  Computer Science Department \\
@@ -29,7 +29,6 @@
 
 \begin{document}
 \maketitle
-
 
 
 \input{abstract}
