--- a/report/naaclhlt2013.sty
+++ b/report/naaclhlt2013.sty
@@ -36,7 +36,7 @@
 % prepared by Fernando Pereira and others and some minor changes 
 % by Paul Jacobs.
 
-% Papers prepared using the aclsub.sty file and acl.bst bibtex style
+% Papers prepared using the aclsub.sty file and acl.bst      style
 % should be easily converted to final format using this style.  
 % (1) Submission information (\wordcount, \subject, and \makeidpage)
 % should be removed.
