--- a/report/intro.tex
+++ b/report/intro.tex
@@ -6,11 +6,11 @@ Sentiment of microblog is of particular interest because such information is val
 However, sentiment analysis over twitter message is a challenging task due to the noisy nature of it. 
 It contains ungrammatical sentences, typos, creative punctuation, slang, new words, URLs, and genre-specific terminology and abbreviations, such as, RT for “re-tweet”, \#hashtags, @mentions. 
 
-Most of existing works are based on bag of words classifiers. Different features to improve the performance of bag-of-words model have been proposed. Such classifiers can work well in longer documents by relying on a few words with strong sentiment such as "great" or "awesome". However, bag-of-words models have difficulties in handling in negation and comparisons, which involves the structure of sentence. 
+Most of existing works of sentiment analysis are based on bag of words classifiers. Different features to improve the performance of bag-of-words model have been proposed\cite{Agarwal:2011}. Such classifiers can work well in longer documents by relying on a few words with strong sentiment such as "great" or "awesome". However, bag-of-words models have difficulties in handling in negation and comparisons, which involves the structure of sentence. 
 
-Recursive Neural Tensor Network (RNTN) model is recently proposed to capture the compositional effects with higher accuracy. Recursive Neural Tensor Networks take as input phrases of any length. They represent a phrase through word vectors and a parse tree and then compute vectors for higher nodes in the tree using the same tensor-based composition function. (Socher et al., 2013). The authors claim that RNTN can accurately captures the sentiment change and scope of negation. However, the data set used in the above paper is bunch of single sentences extracted from well formatted movie reviews, which is quite different from twitter message. 
+Recursive Neural Tensor Network (RNTN) model is recently proposed to capture the compositional effects with higher accuracy. Recursive Neural Tensor Networks take as input phrases of any length. They represent a phrase through word vectors and a parse tree and then compute vectors for higher nodes in the tree using the same tensor-based composition function. \cite{Socher:2013}. The authors claim that RNTN can accurately captures the sentiment change and scope of negation. However, the data set used in the above paper is a bunch of single sentences extracted from well formatted movie reviews, which is quite different from twitter message. 
 
-In this paper, we evaluate bag-of-word model and RNTN model on tweet message to compare the performance of the two types of model. We collect twitter message from different sources and labeled some of them. Such corpus has been pre-processed according to the natural of different models. We conduct extensive experiment ...
+In this paper, we evaluate both bag-of-word model and RNTN model on tweet message to compare the performance of the two types of model. We collect twitter message from different sources and labeled some of them. Such corpus has been pre-processed according to the natural of different models. We conduct extensive experiment ...
 
 The paper is organized as follows. Section 2 defines the task we are solving and explains our approach. 
 Section 3 presents and discusses experiment results. Section 4 details related work and Section 5 concludes the paper.
